--- a/newb-remaining/index.html
+++ b/newb-remaining/index.html
@@ -1,1 +1,123 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="Newb, shader, Minecraft, renderdragon">
+    <meta name="description" content="A shader ported from Newb shaders with smooth fogs and clean tonemap colors">
+	<meta name="author" content="firmw4">
+    
+    <title>Newb Remaining</title>
+    <link rel="stylesheet" href="style.css">
+    <link href='https://fonts.googleapis.com/css?family=AR One Sans' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=ADLaM Display' rel='stylesheet'>
+	<link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
+	<link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
+	<link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
+	<link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png">
+	<link rel="apple-touch-icon" sizes="114x114" href="/apple-icon-114x114.png">
+	<link rel="apple-touch-icon" sizes="120x120" href="/apple-icon-120x120.png">
+	<link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png">
+	<link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png">
+	<link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png">
+	<link rel="icon" type="image/png" sizes="192x192"  href="/android-icon-192x192.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+	<link rel="manifest" href="/manifest.json">
+	<meta name="msapplication-TileColor" content="#ffffff">
+	<meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+	<meta name="theme-color" content="#ffffff">
+	
+</head>
+<body class="line-pattern">
+    <header>
+        <figure>
+            <img class="header-img" src="img/title.png" alt="Newb Remaining">
+        </figure>
+    </header>
+  
+  <article>
+    <h1>Newb Remaining</h1>
+    <p>A Renderdragon shader ported from Newb shader with smooth fog and clean tonemap sky colors</p>
+  </article>
 
+	    <main>
+        <article>
+            <div class="image-grid">
+                <figure>
+                    <img class="image-item" src="img/ss.jpg" alt="View">
+                </figure>
+                <figure>
+                    <img class="image-item" src="img/ss1.jpg" alt="View">
+                </figure>
+                <figure>
+                    <img class="image-item" src="img/ss2.jpg" alt="View">
+                </figure>
+            </div>
+            <div class="image-grid">
+                <figure>
+                    <img class="image-item" src="img/ss3.jpg" alt="View">
+                </figure>
+                <figure>
+                    <img class="image-item" src="img/ss4.jpg" alt="View">
+                </figure>
+                <figure>
+                    <img class="image-item" src="img/ss5.jpg" alt="View">
+                </figure>
+            </div>
+          <div class="image-grid">
+                <figure>
+                    <img class="image-item" src="img/ss6.jpg" alt="View">
+                </figure>
+                <figure>
+                    <img class="image-item" src="img/ss7.jpg" alt="View">
+                </figure>
+                <figure>
+                    <img class="image-item" src="img/ss8.jpg" alt="View">
+                </figure>
+            </div>
+        </figure>
+            </div>
+        </article>      
+    </main>
+	
+  <article>
+	  <h3>Shaders Download</h3>
+	  <p>Download these shader to make your Minecraft more improvement with better fog and change tonemap colors more shiny and experience!</p>
+		<div class="button-container">
+			<button class="block-button-a" onclick="window.open('https://github.com/firmw4/newb-remaining/releases/download/5/newb-remaining-android.mcpack', '_blank')">Download Shaders (Android)</button>
+			<button class="block-button-b" onclick="window.open('https://github.com/firmw4/newb-remaining/releases/download/5/newb-remaining-windows.zip', '_blank')">Download Shaders (Windows)</button>
+		</div>
+   </article>
+  
+  <article>
+    <div class="button-container">
+      <button class="block-button-c" onclick="window.open('https://github.com/firmw4/newb-remaining/releases/download/5/newb-remaining-ios-materials.zip', '_blank')">Download Materials (iOS)</button>
+      <button class="block-button-d" onclick="window.open('https://github.com/firmw4/newb-remaining/releases', '_blank')">Github Releases</button>
+    </div>
+  </article>
+  
+  <article>
+    <h3>Screenshots</h3>
+  </article>
+  
+    <footer>
+      <div class="footer-con">
+      <div class="footer-col">
+        <ul>
+          <li><img class="footer-img" src="img/newb.png" alt="Newb"></li>
+        </ul>
+        <ul>
+          <li><a href="https://discord.com/invite/newb-community-844591537430069279">Discord Newb</a></li>
+          <li><a href="https://github.com/firmw4">Github</a></li>
+          <li><a href="https://teer.id/firmw4">Trakteer</a></li>
+        </ul>
+      </div>
+      <div class="footer-copyright"
+        <p>Copyright © 2024 Firmw4</p>
+      </div>
+      </div>
+    </footer>
+</body>
+</html>
