--- a/index.html
+++ b/index.html
@@ -23,16 +23,8 @@
       <h1>Firmw4</h1>
     </figure>
   </header>
-  
-    <article>
-        <p>Student & Programmer</p>
-    </article>
-    <article>
-    <div class="button-container">
-      <button class="block-button" onclick="window.open('https://firmw4.github.io/newb-remaining', '_blank')">Newb Remaining (Ported)</button>
-      <button class="block-button" onclick="window.open('https://github.com/firmw4/namida-translations', '_blank')">Namida Translations (Indonesian)</button>
-    </div>
-  </article>
+
+    <h1>ummm</h1>
   
   <main>
     <p>Currently learning HTML, CSS, JAVA & GLSL</p>
